<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.admin.modules.user.AdminUserAddActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textAddTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_user_label_add_info"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- 이름 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/admin_user_label_name" />

        <EditText
            android:id="@+id/editNewUserName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_button_gray"
            android:padding="12dp" />

        <!-- 이메일 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/admin_user_label_email" />

        <EditText
            android:id="@+id/editNewUserEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_button_gray"
            android:padding="12dp" />

        <!-- 비밀번호 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/admin_user_label_password" />

        <EditText
            android:id="@+id/editNewUserPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:background="@drawable/bg_button_gray"
            android:padding="12dp" />

        <!-- 비밀번호 확인 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/admin_user_label_password_confirm" />

        <EditText
            android:id="@+id/editNewUserPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:background="@drawable/bg_button_gray"
            android:padding="12dp" />

        <!-- 관리자 계정 체크 -->
        <CheckBox
            android:id="@+id/checkboxNewIsAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/admin_user_label_is_admin" />

        <!-- 추가 버튼 -->
        <Button
            android:id="@+id/buttonAddUserConfirm"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button_gray"
            android:text="@string/admin_user_button_add" />

    </LinearLayout>
</ScrollView>
