<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/textDeleteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_user_delete_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="40dp" />

    <Button
        android:id="@+id/buttonDeleteYes"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/bg_button_gray"
        android:text="@string/admin_user_delete_yes" />

    <Button
        android:id="@+id/buttonDeleteNo"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_gray"
        android:text="@string/admin_user_delete_no" />

</LinearLayout>
