<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.modules.TermsAgreementActivity">

    <TextView
        android:id="@+id/textTermsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textTermsContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/terms_preview"
        android:padding="16dp"
        android:background="@color/terms_box_background"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/textTermsTitle"
        app:layout_constraintBottom_toTopOf="@id/buttonAgree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonAgree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/terms_agree"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonDisagree" />

    <Button
        android:id="@+id/buttonDisagree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/terms_disagree"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonAgree"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
